[gd_scene load_steps=9 format=2]

[ext_resource path="res://Src/HUD/MissionBriefing.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/MagoFont3_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/HUD/MissionBriefing.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/MagoFont3_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Menu/MenuTitle.png" type="Texture" id=5]
[ext_resource path="res://Assets/HUD/MissionMaps.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/mago1.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[node name="MissionBriefing" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 0.192157, 0.192157, 0.192157, 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BriefingLabel" type="RichTextLabel" parent="."]
margin_left = 336.0
margin_top = 88.0
margin_right = 616.0
margin_bottom = 272.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "November 1961. We have information that a first American manned orbit of the Earth is to take place. The mission is called: Mercury-Atlas 5.

The guy in the training for this is called \"Mr. Enzo\". You need to infiltrate the NASA training site and take some photos of Mr. Enzo's training program. 

We want to know how the Americans prepare for something like this."
text = "November 1961. We have information that a first American manned orbit of the Earth is to take place. The mission is called: Mercury-Atlas 5.

The guy in the training for this is called \"Mr. Enzo\". You need to infiltrate the NASA training site and take some photos of Mr. Enzo's training program. 

We want to know how the Americans prepare for something like this."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FunFactLabel" type="RichTextLabel" parent="."]
margin_left = 21.0
margin_top = 289.0
margin_right = 616.0
margin_bottom = 318.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "               The closest galaxy to us is the Andromeda Galaxy – it’s estimated at 2.5 million light-years away."
text = "               The closest galaxy to us is the Andromeda Galaxy – it’s estimated at 2.5 million light-years away."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 616.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "Mission Briefing"
align = 1
valign = 1

[node name="MapSprite" type="Sprite" parent="."]
position = Vector2( 32, 88 )
texture = ExtResource( 6 )
centered = false
hframes = 3

[node name="Label2" type="Label" parent="."]
margin_left = 712.0
margin_top = 40.0
margin_right = 992.0
margin_bottom = 88.0
text = "568 Char texts"
__meta__ = {
"_edit_use_anchors_": false
}
